Update cross-references to use GitHub Pages URLs

--- a/evaluation-criteria.html
+++ b/evaluation-criteria.html
@@ -27,7 +27,7 @@
                         <a href="index.html" class="btn btn-secondary">
                             <i class="fa-solid fa-arrow-left"></i> Zurück zum Compass
                         </a>
-                        <a href="../SAA/Sovereign_Architecture_Advisor.html" class="btn btn-secondary">
+                        <a href="https://btc-ag.github.io/SAA/" class="btn btn-secondary">
                             Architecture Advisor
                         </a>
                         <a href="https://outlook.office.com/book/BTCAGManagedCloudServices@btcag.onmicrosoft.com/s/U1HPjhE9b0qdW-uTHThOSw2?ismsaljsauthenabled" target="_blank" class="btn btn-primary">
