--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </a>
                     <div class="header-actions">
                         <div class="theme-toggle" onclick="toggleTheme()" role="button" aria-label="Toggle dark mode"></div>
-                        <a href="../SAA/Sovereign_Architecture_Advisor.html" class="btn btn-secondary">
+                        <a href="https://btc-ag.github.io/SAA/" class="btn btn-secondary">
                             Architecture Advisor
                         </a>
                         <a href="https://www.btc-ag.com/download?g=whitepaper-cloud-compass" target="_blank" class="btn btn-secondary">
